# uw-astro-480.github.io

./: .buildinfo  .gitignore  LICENSE  README.md  faq.html  genindex.html  index.html  noxfile.py  objects.inv  pyproject.toml  schedule.html  search.html  searchindex.js  syllabus.html
.doctrees/: environment.pickle  faq.doctree  index.doctree  schedule.doctree  syllabus.doctree
.doctrees/arcsat/: arcsat.doctree  observing.doctree  paper.doctree  proposals.doctree
.doctrees/assignments/: assignments.doctree
.doctrees/codedev/: codedev.doctree  plotting.doctree  setup.doctree  visualisation_tools.doctree
.doctrees/lecture_notes/: lecture_notes.doctree
.doctrees/lectures/: lecture_1.doctree  lectures.doctree
.github/workflows/: build.yaml
_downloads/55c06795e23c8047b9701c3e78651753/: catalogue_data.ipynb
_downloads/762467502210fdff469ec30d01df6105/: ccd_reductions.ipynb
_downloads/d4d061b92d162b1cdbe36dd08fc701fe/: data_visualisation.ipynb
_sources/: index.md.txt  schedule.md.txt
_sources/arcsat/: paper.md.txt  proposals.md.txt
_sources/assignments/: assignments.md.txt
_sources/codedev/: codedev.md.txt  plotting.md.txt  setup.md.txt  visualisation_tools.md.txt
_sources/lecture_notes/: lecture_notes.md.txt
_static/: pygments.css
arcsat/: arcsat.html  observing.html  paper.html  proposals.html
assignments/: assignments.html
codedev/: codedev.html  plotting.html  setup.html  visualisation_tools.html
docs/: conf.py  faq.md  index.md  schedule.md  syllabus.md
lecture_notes/: lecture_notes.html
lectures/: lecture_1.html  lectures.html
(+77 files in other folders)
