[project]
name = "astr-480-sp-25"
version = "0.1.0"
description = "Lessons and class materials for ASTR 480"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
dependencies = [
    "doc8>=1.1.2",
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "nox>=2024.10.9",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-copybutton>=0.5.2",
]
